# Programmentwurf

./: .gitignore  Build_And_Run.bat  Build_And_Run.sh  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Doxyfile  Makefile  README.md  cmake_exec  cmake_install.cmake  group_p_cpp  if_switch_case  if_switch_case.c  junior_tests  junior_tests[1]_include.cmake  junior_tests[1]_tests.cmake  logo.txt  run_cmake.sh  senior_tests  senior_tests[1]_include.cmake  senior_tests[1]_tests.cmake
.github/workflows/: doxygen.yml
Testing/Temporary/: CTestCostData.txt
include/: JuniorDeveloper.hpp  SeniorDeveloper.hpp  developer.hpp  junior_developer.hpp  senior_developer.hpp
src/: JuniorDeveloper.cpp  SeniorDeveloper.cpp  developer.cpp  junior_developer.cpp  main.cpp  senior_developer.cpp
test/: test_developer.cpp  test_junior_developer.cpp  test_senior_developer.cpp
tests/: test_developer.cpp
